force-app/main/default/objects/Payroll_Record_Detail__c/Payroll_Record_Detail__c.object-meta.xml
<CustomObject>
    <description>Used for BOFE inspections - Individuals on a payroll record.</description>
    <label>Payroll Record Detail</label>
    <nameField>
        <displayFormat>PRD-{000000}</displayFormat>
        <label>Payroll Record Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Record Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>