force-app/main/default/objects/Payroll_Record_Detail__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <inlineHelpText>Name of employee for which this payroll record applies</inlineHelpText>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>