force-app/main/default/objects/Payroll_Record_Detail__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <inlineHelpText>Enter the hours worked by the employee during this period.</inlineHelpText>
    <label>Hours Worked</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>