force-app/main/default/objects/Payroll_Record_Detail__c/fields/Payroll_Record__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Record__c</fullName>
    <description>Parent Payroll record. Indicates the period for which this detail applies</description>
    <label>Payroll Record</label>
    <referenceTo>Payroll_Record__c</referenceTo>
    <relationshipLabel>Payroll Record Details</relationshipLabel>
    <relationshipName>Payroll_Record_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>